--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,13 @@
     <script type="text/javascript" src="./js/bundle.js"></script>
   </head>
   <body>
-    <h1>サンプルサイト</h1>
+    <div class="content"></div>
+    <div class="loading">
+      <div class="bar bar1"></div>
+      <div class="bar bar2"></div>
+      <div class="bar bar3"></div>
+      <div class="bar bar4"></div>
+      <div class="bar bar5"></div>
+    </div>
   </body>
 </html>
