--- a/dest/index.html
+++ b/dest/index.html
@@ -9,13 +9,18 @@
     <script type="text/javascript" src="./js/bundle.js"></script>
   </head>
   <body>
-    <div class="content"></div>
-    <div class="loading">
-      <div class="bar bar1"></div>
-      <div class="bar bar2"></div>
-      <div class="bar bar3"></div>
-      <div class="bar bar4"></div>
-      <div class="bar bar5"></div>
+    <div class="content">
+      <div class="loading">
+        <div class="bar bar1"></div>
+        <div class="bar bar2"></div>
+        <div class="bar bar3"></div>
+        <div class="bar bar4"></div>
+        <div class="bar bar5"></div>
+      </div>
+    </div>
+
+    <div class="line-loading">
+      <div class="line"></div>
     </div>
   </body>
 </html>
