--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,9 @@
     <script type="text/javascript" src="./js/bundle.js"></script>
   </head>
   <body>
+    <ul>
+      <li><a href="./buttons.html">buttons</a></li>
+    </ul>
     <div class="content">
       <div class="loading">
         <div class="bar bar1"></div>
