--- a/dest/buttons.html
+++ b/dest/buttons.html
@@ -9,10 +9,7 @@
   </head>
   <body>
     <div class="buttons">
-      <button class="button slide-in" id="slide-in">
-        <span></span>
-        Slide In
-      </button>
+      <button class="button slide-in">Slide In</button>
       <!-- <button class="button">bbb</button>
       <button class="button">ccc</button>
       <button class="button">ddd</button> -->
