--- a/src/html/buttons.html
+++ b/src/html/buttons.html
@@ -10,6 +10,7 @@
   <body>
     <div class="buttons">
       <button class="button slide-in">Slide In</button>
+      <button class="button text-transition">text effect</button>
       <!-- <button class="button">bbb</button>
       <button class="button">ccc</button>
       <button class="button">ddd</button> -->
