svgでの波線アニメーションを追加

--- a/dest/index.html
+++ b/dest/index.html
@@ -11,8 +11,9 @@
   <body>
     <ul>
       <li><a href="./buttons.html">buttons</a></li>
+      <li><a href="./svg.html">svg</a></li>
     </ul>
-    <div class="content">
+    <!-- <div class="content">
       <div class="loading">
         <div class="bar bar1"></div>
         <div class="bar bar2"></div>
@@ -24,6 +25,6 @@
 
     <div class="line-loading">
       <div class="line"></div>
-    </div>
+    </div> -->
   </body>
 </html>
