波線アニメーションの修正

--- a/dest/svg.html
+++ b/dest/svg.html
@@ -79,28 +79,17 @@
       </svg>
     </div> -->
 
-    <svg viewBox="0 0 120 28">
-      <defs>
-        <!-- <filter id="goo">
-          <feGaussianBlur in="SourceGraphic" stdDeviation="1" result="blur" />
-          <feColorMatrix
-            in="blur"
-            mode="matrix"
-            values="
-                1 0 0 0 0  
-                0 1 0 0 0  
-                0 0 1 0 0  
-                0 0 0 13 -9"
-            result="goo"
-          />
-        </filter> -->
+    <div class="wrap">
+      <p class="svg-title">Blend modes</p>
+      <svg viewBox="0 0 120 28">
         <path
           id="wave"
           d="M 0,10 C 30,10 30,15 60,15 90,15 90,10 120,10 150,10 150,15 180,15 210,15 210,10 240,10 v 28 h -240 z"
         />
-      </defs>
-      <use id="wave2" class="wave" xlink:href="#wave" x="0" y="0"></use>
-    </svg>
+        <use id="wave1" class="wave" xlink:href="#wave" x="0" y="0"></use>
+        <use id="wave2" class="wave" xlink:href="#wave" x="0" y="0"></use>
+      </svg>
+    </div>
 
     <script type="text/javascript" src="./js/bundle.js"></script>
   </body>
