--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <script type="text/javascript" src="./js/bundle.js"></script>
   </head>
   <body>
     <ul>
       <li><a href="./buttons.html">buttons</a></li>
       <li><a href="./svg.html">svg</a></li>
+      <li><a href="./scrollanimation.html">scrollanimation</a></li>
     </ul>
     <!-- <div class="content">
       <div class="loading">
@@ -26,5 +26,20 @@
     <div class="line-loading">
       <div class="line"></div>
     </div> -->
+
+    <h1 class="title">
+      <span class="word">寿</span>
+      <span class="word">司</span>
+      <span class="word">食</span>
+      <span class="word">べ</span>
+      <span class="word">た</span>
+      <span class="word">い</span>
+    </h1>
+
+    <div class="box box1"></div>
+    <div class="box box2 orange"></div>
+    <div class="box box3 grey"></div>
+
+    <script type="text/javascript" src="./js/bundle.js"></script>
   </body>
 </html>
