--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,20 +12,9 @@
       <li><a href="./buttons.html">buttons</a></li>
       <li><a href="./svg.html">svg</a></li>
       <li><a href="./scrollanimation.html">scrollanimation</a></li>
+      <li><a href="./interaction.html">interaction</a></li>
+      <li><a href="./three.html">three</a></li>
     </ul>
-    <!-- <div class="content">
-      <div class="loading">
-        <div class="bar bar1"></div>
-        <div class="bar bar2"></div>
-        <div class="bar bar3"></div>
-        <div class="bar bar4"></div>
-        <div class="bar bar5"></div>
-      </div>
-    </div>
-
-    <div class="line-loading">
-      <div class="line"></div>
-    </div> -->
 
     <h1 class="title">
       <span class="word">寿</span>
