--- a/dest/index.html
+++ b/dest/index.html
@@ -14,6 +14,7 @@
       <li><a href="./scrollanimation.html">scrollanimation</a></li>
       <li><a href="./interaction.html">interaction</a></li>
       <li><a href="./three.html">three</a></li>
+      <li><a href="./scrolleffect.html">scrolleffect</a></li>
     </ul>
 
     <h1 class="title">
