add text scramble

--- a/dest/index.html
+++ b/dest/index.html
@@ -15,6 +15,7 @@
       <li><a href="./interaction.html">interaction</a></li>
       <li><a href="./three.html">three</a></li>
       <li><a href="./scrolleffect.html">scrolleffect</a></li>
+      <li><a href="./texteffect.html">texteffect</a></li>
     </ul>
 
     <h1 class="title">
