--- a/dest/index.html
+++ b/dest/index.html
@@ -8,28 +8,106 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="./buttons.html">buttons</a></li>
-      <li><a href="./svg.html">svg</a></li>
-      <li><a href="./scrollanimation.html">scrollanimation</a></li>
-      <li><a href="./interaction.html">interaction</a></li>
-      <li><a href="./three.html">three</a></li>
-      <li><a href="./scrolleffect.html">scrolleffect</a></li>
-      <li><a href="./texteffect.html">texteffect</a></li>
-    </ul>
+    <div class="text-animation">
+      <h1>
+        <span class="title">
+          <span class="word">S</span>
+          <span class="word">c</span>
+          <span class="word">r</span>
+          <span class="word">o</span>
+          <span class="word">l</span>
+          <span class="word">l</span>
+          <span class="word space">A</span>
+          <span class="word">n</span>
+          <span class="word">i</span>
+          <span class="word">m</span>
+          <span class="word">a</span>
+          <span class="word">t</span>
+          <span class="word">i</span>
+          <span class="word">o</span>
+          <span class="word">n</span>
+        </span>
+        <span class="sub-title">with GSAP</span>
+      </h1>
+      <div class="scroll"></div>
+    </div>
 
-    <h1 class="title">
-      <span class="word">寿</span>
-      <span class="word">司</span>
-      <span class="word">食</span>
-      <span class="word">べ</span>
-      <span class="word">た</span>
-      <span class="word">い</span>
-    </h1>
+    <div class="slide-in section">
+      <div class="left">
+        <p>
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+          commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
+          et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
+          felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla
+          consequat massa quis enim. Donec pede justo, fringilla vel, aliquet
+          nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
+          venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+          Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean
+          vulputate eleifend tellus.
+        </p>
+      </div>
+      <div class="right">
+        <p>
+          sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam
+          quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas
+          nec odio et ante tincidunt tempus. Donec vitae sapien ut libero
+          venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros
+          faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh.
+          Donec sodales sagittis magna. Sed consequat, leo eget bibendum
+          sodales, augue velit cursus nunc,
+        </p>
+      </div>
+    </div>
 
-    <div class="box box1"></div>
-    <div class="box box2 orange"></div>
-    <div class="box box3 grey"></div>
+    <div class="fixed-image section">
+      <div class="inner">
+        <div class="image">
+          <img src="https://picsum.photos/id/550/1000/800" alt="" />
+        </div>
+        <div class="content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+            commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+            Nulla consequat massa quis enim. Donec pede justo, fringilla vel,
+            aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
+            imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede
+            mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum
+            semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
+            porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
+            ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra
+            nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet.
+            Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
+            nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
+            condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem
+            neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar,
+            hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus.
+            Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
+            Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed
+            fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed
+            consequat, leo eget bibendum sodales, augue velit cursus nunc,
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="pined section">
+      <div class="pined-inner">
+        <ul class="pined-list">
+          <li><img src="https://picsum.photos/id/1028/1000/800" alt="" /></li>
+          <li><img src="https://picsum.photos/id/1035/1000/800" alt="" /></li>
+          <li><img src="https://picsum.photos/id/1040/1000/800" alt="" /></li>
+          <li><img src="https://picsum.photos/id/1047/1000/800" alt="" /></li>
+          <li><img src="https://picsum.photos/id/1048/1000/800" alt="" /></li>
+          <li><img src="https://picsum.photos/id/1055/1000/800" alt="" /></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer section">
+      <p class="title fadein">End</p>
+    </div>
 
     <script type="text/javascript" src="./js/bundle.js"></script>
   </body>
